Fix spacing inside content

--- a/packages/circuit-ui/components/NotificationBanner/NotificationBanner.module.css
+++ b/packages/circuit-ui/components/NotificationBanner/NotificationBanner.module.css
@@ -30,6 +30,7 @@
 .content {
   display: flex;
   flex-direction: column;
+  gap: var(--cui-spacings-byte);
   max-width: 600px;
   margin-top: var(--cui-spacings-giga);
   margin-right: var(--cui-spacings-byte);
@@ -48,7 +49,6 @@
 /* Child elements */
 
 .base .headline {
-  margin-bottom: var(--cui-spacings-byte);
   font-size: var(--cui-headline-s-font-size);
   line-height: var(--cui-headline-s-line-height);
 }
